# Intelligent-Security-Monitoring-System

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build-linux_RK356X.sh
convert_rknn_demo/yolov6n/: dataset.txt  onnx2rknn.py
include/: analysis_record.h  analysis_record_json.h  analysis_recorder.h  detection_result_views.h  detector.h  image_preprocess.h  image_preprocess_opencv.h  intrusion_evaluator.h  local_overlay_renderer.h  object_tracker.h  observation_policy.h  perf_stats.h  postprocess.h  preprocess_transform.h  result_render.h  runtime_evidence.h  sha256.h  stream_overlay_policy.h  stream_pipeline.h  tracking_profile.h
profiles/cameras/: camera0.json
profiles/events/: camera0.json
profiles/tracking/: default-general.json  indoor-person.json  outdoor-person.json  vehicle-monitoring.json
schemas/v351/: analysis-record.schema.json  recording-manifest.schema.json  replay-output.schema.json  session-status.schema.json  tracking-profile.schema.json
src/: analysis_record.cc  analysis_record_json.cc  analysis_recorder.cc  detection_result_views.cc  detector.cc  image_preprocess.cc  image_preprocess_opencv.cc  intrusion_evaluator.cc  main.cc  main_stream_server.cc  object_tracker.cc  observation_policy.cc  perf_stats.cc  postprocess.cc  preprocess_transform.cc  result_render.cc  runtime_evidence.cc  sha256.cc  stream_overlay_policy.cc  stream_pipeline.cc  tracking_profile.cc
tests/: CMakeLists.txt  stream_pipeline_test.cc  test_v350_host_viewer_tracking.py  test_v351_host_profile_launch.py  test_v351_host_viewer_gui.py  test_v351_host_viewer_recording.py  test_v351_host_viewer_replay.py  test_v351_host_viewer_workflow.py  test_v351_profile_catalog.py  test_v351_tracking_profile.py  test_v36_host_viewer_intrusion.py  v350_detection_result_views_test.cc  v350_object_tracker_test.cc  v351_analysis_recorder_test.cc  v351_contracts_test.cc  v351_observation_policy_test.cc  v351_tracking_replay_test.cc  v36_intrusion_evaluator_test.cc
tests/data/: v350_tracking_sequences.csv  v351_profile_golden.json  v351_profile_invalid.json  v351_profile_source.json  v351_recording_session.json  v351_replay_manifest.json
tests/data/v351_session/: manifest.json  records-000001.jsonl
tools/: rga_resize_probe.cc  rga_rknn_mem_probe.cc  validate_v322_letterbox.py  validate_v331_overlay_policy.cc  validate_v350_tracking_fixtures.py  validate_yolov6_postprocess.py
tools/host_viewer/: README.md  __init__.py  cli.py  config.py  controller.py  event_profile.py  gui.py  intrusion_overlay.py  profile_catalog.py  recording.py  replay.py  stream.py  tracking_overlay.py  tracking_profile.py  workflow.py
tools/tracking_replay/: CMakeLists.txt  main.cc  replay_comparator.cc  replay_runner.cc  replay_writer.cc  session_reader.cc  tracking_replay.h
